Fixed line-height problem on mobile

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -67,12 +67,12 @@ ul.blog-entries {
     .title {
       white-space: nowrap;
       text-overflow: ellipsis;
-      overflow-x: hidden;
+      overflow-y: hidden;
       opacity: 0.8;
 
       @media only screen and (max-width: 600px) {
         font-size: 23px;
-        line-height: 23px;
+        line-height: 30px;
       }
 
       a {
